# Assembler

./: CMakeLists.txt  README  README_air.txt  SCP.cpp  Sensor.cpp  assembler.cpp  assembler.hpp  bu.txt  clustering.cpp  clusteringSegment.cpp  evolvingIntervalExtraction.cpp  extracting.cpp  input.cpp  locations.txt  makefile  output.cpp  scpSearch.cpp  segmenting.cpp  segmentingTimeSeries.cpp
output/: data_0-0.csv  data_0-179.csv  data_0-30.csv  data_10-20.csv
